--- a/blog1.html
+++ b/blog1.html
@@ -21,7 +21,7 @@
           </ul>
          </div>
          <div class="text1">
-            <h1>BLOG</h1>
+            <h1>yazilacaq basliq</h1>
             <h2>yazilacaq melumat</h2>
             <button onclick="location.href='blogs.html'" type="button">blogs</button>
          </div>
